# CMake-template

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: documentation.yaml
app/: CMakeLists.txt  main.c
cmake/: linaroAarch64Toolchain.cmake  top.cmake
cmake-kconfig/: CMakeCache.txt  CMakeLists.txt
cmake-kconfig/cmake/: top.cmake
config/: CMakeLists.txt  Kconfig  README.md  autoconf.h
config/autoconf/: autoconf.h
config/defconfigs/: dummy_defconfig
src/: CMakeLists.txt
src/module_A/: CMakeLists.txt
src/module_B/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/linked_list/: CMakeLists.txt  linked_list_test.cpp
